# c-proj

./: .gitignore  README.md
36-valid-soduko/: CMakeLists.txt  main.c  valid_soduko
advent-of-code/: day1.c  main
conf-store/: CMakeLists.txt  conf_store  main.c
hello-world/: CMakeLists.txt  hello_world  hello_world.h.in  main.c
leet/: CMakeLists.txt  leet  main.c  test.csv
leet/include/: palindrom.h  roman2int.h
leet/src/: palindrom.c  roman2int.c  test.c
